--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@types/papaparse": "^5.3.16",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.11.0",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
@@ -18,6 +20,7 @@
     "mongoose": "^8.17.1",
     "next": "^15.4.6",
     "papaparse": "^5.5.3",
+    "puppeteer": "^24.17.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
