--- a/package.json
+++ b/package.json
@@ -3,43 +3,61 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test-scraper": "npx ts-node scripts/test-scraper.ts",
-    "start-monitoring": "npx ts-node scripts/start-monitoring.ts"
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma migrate reset",
+    "migrate-data": "tsx scripts/migrate-data.ts",
+    "scraper-test": "tsx scripts/test-scraper.ts"
   },
   "dependencies": {
-    "@types/papaparse": "^5.3.16",
-    "@types/uuid": "^10.0.0",
-    "axios": "^1.11.0",
-    "cheerio": "^1.1.2",
+    "@prisma/client": "^5.22.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.539.0",
-    "mongodb": "^6.18.0",
-    "mongoose": "^8.17.1",
-    "next": "^15.4.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.363.0",
+    "next": "14.1.3",
+    "nodemailer": "^6.10.1",
+    "openai": "^4.104.0",
     "papaparse": "^5.5.3",
-    "puppeteer": "^24.17.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "recharts": "^3.1.2",
+    "postcss": "^8.5.6",
+    "puppeteer": "^22.4.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "rate-limiter-flexible": "^4.0.1",
+    "react": "^18",
+    "react-dom": "^18",
+    "redis": "^4.7.1",
     "tailwind-merge": "^3.3.1",
-    "ts-node": "^10.9.2",
-    "uuid": "^11.1.0"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5",
+    "uuid": "^9.0.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/cheerio": "^0.22.35",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.20",
+    "@types/nodemailer": "^6.4.19",
+    "@types/papaparse": "^5.3.16",
+    "@types/puppeteer": "^7.0.4",
+    "@types/uuid": "^9.0.8",
+    "prisma": "^5.22.0",
+    "tsx": "^4.20.5"
   }
 }
