--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "scraper-test": "tsx scripts/test-scraper.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.61.0",
     "@prisma/client": "^5.22.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -36,7 +37,7 @@
     "openai": "^4.104.0",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
-    "puppeteer": "^22.4.0",
+    "puppeteer": "^22.15.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rate-limiter-flexible": "^4.0.1",
