--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
