--- a/dockerfile-for-dev
+++ b/dockerfile-for-dev
@@ -1,6 +1,5 @@
 
-
-FROM node:20-bullseye
+FROM node:24.9-bookworm-slim
 
 RUN apt-get update && \
 	apt-get install -y \
@@ -16,6 +15,7 @@ RUN apt-get update && \
 WORKDIR /workspace
 
 COPY package*.json ./
+COPY prisma ./prisma
 RUN npm install
 
 COPY . .
