Added all api key in the env files (Not commited, please never commit the env files) and the secret.ts that loads the config files and merge witht the proper api key

--- a/ai-engines.config.json
+++ b/ai-engines.config.json
@@ -24,7 +24,10 @@
       "id": "claude-1",
       "provider": "claude",
       "description": "Anthropic Claude example",
-      "params": { "model": "claude-2", "temperature": 0.2 }
+      "params": { "model": "claude-2", "temperature": 0.2 },
+      "credentials": {
+        "apiKey": ""
+      }
     },
     {
       "id": "gemini-1",
